--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
-    <title>Data Science Enthusiast</title>
+    <title>Product Manager Enthusiastic</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
@@ -71,24 +71,24 @@
 
         <div class="home-text">
             <h5>Hello, I am</h5>
-            <h1>Shantanu Ve<span>rma</span></h1>
-            <h6>I am Passionate Data <span>Scientist.</span></h6>
+            <h1>Rishabh Ma<span>heshwari</span></h1>
+            <h6>I am Passionate product<span>manager.</span></h6>
             <p>Strategic and result-driven data enthusiast, having strong willingness to exhibit my proficiency in Analytical tools, Data
                 visualization and Computing Methodologies in the professional environment.
 
             </p>
             <div class="social">
                 <div class="social-btn">
-                    <a href="https://www.linkedin.com/in/shantanu-verma-8305791b2/" target="_blank">
+                    <a href="https://www.linkedin.com/in/rishabh-maheshwari-862b941b5/" target="_blank">
                         <i class="uil uil-linkedin"></i>
                     </a>
-                    <a href="https://github.com/heyshann" target="_blank">
+                    <a href="https://github.com/RishabhMaheshwari99" target="_blank">
                         <i class="uil uil-github"></i>
                     </a>
-                    <a href="https://www.instagram.com/hey__shaan/" target="_blank">
+                    <a href="https://www.instagram.com/i_amrishabhmaheshwari" target="_blank">
                         <i class="uil uil-instagram-alt"></i>
                     </a>
-                    <a href="https://www.facebook.com/shantanu.verma.18" target="_blank">
+                    <a href="https://www.facebook.com/rishabh.maheshwari.7798" target="_blank">
                         <i class="uil uil-facebook"></i>
                     </a>
                 </div>
@@ -100,7 +100,7 @@
 
         </div>
         <div class="home-img">
-            <img src="shantanupic.jpeg" alt="">
+            <img src="rishabh.jpeg" alt="">
 
 
 
@@ -115,7 +115,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="shan2.jpeg" alt="">
+            <img src="rishabh.jpeg" alt="">
 
         </div>
         <div class="about-text">
